--- a/HW1.ipynb
+++ b/HW1.ipynb
@@ -18,9 +18,7 @@
     "id": "OiXzgCcTgC7z"
    },
    "outputs": [],
-   "source": [
-    "# your code here"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -35,13 +33,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "id": "34xD1ujugmIr"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 2.5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.5125\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "a = float(input())\n",
+    "\n",
+    "funts = a*2.2046\n",
+    "\n",
+    "print(funts)"
    ]
   },
   {
@@ -62,9 +79,7 @@
     "id": "MlU7WYtogs7M"
    },
    "outputs": [],
-   "source": [
-    "# your code here"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
