--- a/HW1.ipynb
+++ b/HW1.ipynb
@@ -74,12 +74,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "id": "MlU7WYtogs7M"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 100\n",
+      " 5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.0 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "all = int(input('))\n",
+    "part = int(input())\n",
+    "\n",
+    "print(part/all*100, '%')"
+   ]
   },
   {
    "cell_type": "markdown",
