--- a/HW1.ipynb
+++ b/HW1.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "id": "MlU7WYtogs7M"
    },
@@ -83,8 +83,8 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      " 100\n",
-      " 5\n"
+      "Введите объем целого:  100\n",
+      "Введите объем части:  5\n"
      ]
     },
     {
@@ -96,8 +96,8 @@
     }
    ],
    "source": [
-    "all = int(input('))\n",
-    "part = int(input())\n",
+    "all = int(input('Введите объем целого: '))\n",
+    "part = int(input('Введите объем части: '))\n",
     "\n",
     "print(part/all*100, '%')"
    ]
@@ -115,13 +115,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "id": "O3M8ytzlg3wE"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " tolpa\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "aplot\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "a = str(input())\n",
+    "\n",
+    "print(a[-1::-1])"
    ]
   },
   {
