--- a/HW1.ipynb
+++ b/HW1.ipynb
@@ -136,7 +136,7 @@
     }
    ],
    "source": [
-    "a = str(input())\n",
+    "a = input()\n",
     "\n",
     "print(a[-1::-1])"
    ]
@@ -154,13 +154,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "id": "8HyJ17ydg8_8"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "    !@rewfhlnc@ elncelw@pehkwnc  \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'   !rewfhlnc elncelwpehkwnc  '"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "a = input()\n",
+    "\n",
+    "a.replace('@', '')"
    ]
   },
   {
