--- a/HW1.ipynb
+++ b/HW1.ipynb
@@ -196,13 +196,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "id": "Modj7OKUhA8s"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " ghjk ghjkl ghjkl ghjkl\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "a = input()\n",
+    "\n",
+    "print(a.count(' ')+1)"
    ]
   },
   {
