--- a/HW1.ipynb
+++ b/HW1.ipynb
@@ -235,13 +235,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "id": "ePS6DDKOhGRy"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " квьцмэудвс\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Заканчивается ли инфинитив на -ся: False\n",
+      "Содержит ли инфинитив приставку \"пере-\": False\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# методы\n",
+    "a = input()\n",
+    "\n",
+    "print('Заканчивается ли инфинитив на -ся:', a.endswith('ся'))\n",
+    "print('Содержит ли инфинитив приставку \"пере-\":', a.startswith('пере'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "id": "ePS6DDKOhGRy"
+   },
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " псыдсрося\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Заканчивается ли инфинитив на -ся: False\n",
+      "Содержит ли инфинитив приставку \"пере-\": False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# срезы\n",
+    "a = input()\n",
+    "\n",
+    "a[:-2] == 'ся'\n",
+    "#print('Заканчивается ли инфинитив на -ся:', a[:-2] == 'ся')\n",
+    "#print('Содержит ли инфинитив приставку \"пере-\":', a[:4] == 'пере')"
    ]
   },
   {
