--- a/HW1.ipynb
+++ b/HW1.ipynb
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 37,
    "metadata": {
     "id": "ePS6DDKOhGRy"
    },
@@ -275,15 +275,15 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      " псыдсрося\n"
+      " переуовсся\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Заканчивается ли инфинитив на -ся: False\n",
-      "Содержит ли инфинитив приставку \"пере-\": False\n"
+      "Заканчивается ли инфинитив на -ся: True\n",
+      "Содержит ли инфинитив приставку \"пере-\": True\n"
      ]
     }
    ],
@@ -291,9 +291,8 @@
     "# срезы\n",
     "a = input()\n",
     "\n",
-    "a[:-2] == 'ся'\n",
-    "#print('Заканчивается ли инфинитив на -ся:', a[:-2] == 'ся')\n",
-    "#print('Содержит ли инфинитив приставку \"пере-\":', a[:4] == 'пере')"
+    "print('Заканчивается ли инфинитив на -ся:', a[-2:] == 'ся')\n",
+    "print('Содержит ли инфинитив приставку \"пере-\":', a[:4] == 'пере')"
    ]
   },
   {
