--- a/HW1.ipynb
+++ b/HW1.ipynb
@@ -313,9 +313,7 @@
     "id": "U8ljbLqohS8M"
    },
    "outputs": [],
-   "source": [
-    "# your code here"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -330,13 +328,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {
     "id": "ZEvx8ZJOhb2j"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Введите текст: asdfghjklasdfghjk\n",
+      "Введите символ, который будем искать: a\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Есть ли в строке нужный символ: True\n",
+      "Сколько раз встетился нужный символ: 2\n",
+      "Индекс первого вхождения: 0\n",
+      "Индекс последнего вхождения: 9\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "s = input('Введите текст:')\n",
+    "a = input('Введите символ, который будем искать:')\n",
+    "\n",
+    "print('Есть ли в строке нужный символ:', a in s)\n",
+    "print('Сколько раз встетился нужный символ:', s.count(a))\n",
+    "print('Индекс первого вхождения:', s.index(a))\n",
+    "print('Индекс последнего вхождения:', s.rfind(a))"
    ]
   },
   {
