--- a/HW1.ipynb
+++ b/HW1.ipynb
@@ -308,12 +308,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {
     "id": "U8ljbLqohS8M"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 123.456\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'4'"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = input()\n",
+    "\n",
+    "x[x.find('.')+1]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -328,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 50,
    "metadata": {
     "id": "ZEvx8ZJOhb2j"
    },
@@ -380,9 +402,7 @@
     "id": "-_9mCMVHho-8"
    },
    "outputs": [],
-   "source": [
-    "# your code here"
-   ]
+   "source": []
   }
  ],
  "metadata": {
