--- a/HW1.ipynb
+++ b/HW1.ipynb
@@ -397,12 +397,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {
     "id": "-_9mCMVHho-8"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "cannot assign to expression here. Maybe you meant '==' instead of '='? (1471799610.py, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[59], line 3\u001b[1;36m\u001b[0m\n\u001b[1;33m    if n%10 = 1:\u001b[0m\n\u001b[1;37m       ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m cannot assign to expression here. Maybe you meant '==' instead of '='?\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input())\n",
+    "\n",
+    "if n%10 = 1:\n",
+    "    print(n, 'корова')\n",
+    "elif n%10>1 and n%10<5\n",
+    "    print(n, 'коровы')\n",
+    "else\n",
+    "    print(n, 'коров')"
+   ]
   }
  ],
  "metadata": {
