--- a/HW1.ipynb
+++ b/HW1.ipynb
@@ -13,12 +13,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {
     "id": "OiXzgCcTgC7z"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 3599\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 : 59 : 59\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(input())\n",
+    "\n",
+    "h = a // (60*60)\n",
+    "m = str((a // 60) % 60).zfill(2)\n",
+    "s = str(a % 60).zfill(2)\n",
+    "\n",
+    "print(h, ':', m, ':', s)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -397,28 +420,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 65,
    "metadata": {
     "id": "-_9mCMVHho-8"
    },
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "cannot assign to expression here. Maybe you meant '==' instead of '='? (1471799610.py, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[59], line 3\u001b[1;36m\u001b[0m\n\u001b[1;33m    if n%10 = 1:\u001b[0m\n\u001b[1;37m       ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m cannot assign to expression here. Maybe you meant '==' instead of '='?\n"
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 33\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "33 коровы\n"
      ]
     }
    ],
    "source": [
     "n = int(input())\n",
     "\n",
-    "if n%10 = 1:\n",
+    "if n%10 == 1:\n",
     "    print(n, 'корова')\n",
-    "elif n%10>1 and n%10<5\n",
+    "elif n%10>1 and n%10<5:\n",
     "    print(n, 'коровы')\n",
-    "else\n",
+    "else:\n",
     "    print(n, 'коров')"
    ]
   }
