--- a/HW1.ipynb
+++ b/HW1.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 73,
    "metadata": {
     "id": "OiXzgCcTgC7z"
    },
@@ -22,14 +22,14 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      " 3599\n"
+      " 3600\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 : 59 : 59\n"
+      "1 : 00 : 00\n"
      ]
     }
    ],
@@ -40,7 +40,7 @@
     "m = str((a // 60) % 60).zfill(2)\n",
     "s = str(a % 60).zfill(2)\n",
     "\n",
-    "print(h, ':', m, ':', s)"
+    "print(h, m, s, sep=' : ')"
    ]
   },
   {
