--- a/SEM2.ipynb
+++ b/SEM2.ipynb
@@ -20,12 +20,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "id": "w6kmRElme2bw"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 456789\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Нечетное\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(input())\n",
+    "\n",
+    "if a%2==0:\n",
+    "    print('Четное')\n",
+    "else:\n",
+    "    print('Нечетное')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -43,10 +65,7 @@
     "id": "dMImXaUQfF5k"
    },
    "outputs": [],
-   "source": [
-    "# 123\n",
-    "# 3"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
