Done task 2 and 3

--- a/SEM2.ipynb
+++ b/SEM2.ipynb
@@ -60,12 +60,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "id": "dMImXaUQfF5k"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 3456789\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(input())\n",
+    "\n",
+    "print(a%10)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -78,12 +97,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "id": "T_-Mcqq0fLDb"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 593\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(input())\n",
+    "\n",
+    "z = a%10\n",
+    "y = a//10%10\n",
+    "x = a//10//10\n",
+    "\n",
+    "print(x+y+z)"
+   ]
   },
   {
    "cell_type": "markdown",
