--- a/SEM2.ipynb
+++ b/SEM2.ipynb
@@ -142,12 +142,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "id": "4Dl8z_ApfS78"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 1467\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Этот год невисокосный.\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(input())\n",
+    "\n",
+    "if a%400==0:\n",
+    "    print('Этот год високосный.')\n",
+    "elif a%100==0:\n",
+    "    print('Этот год невисокосный.')\n",
+    "elif a%4==0:\n",
+    "    print('Этот год високосный.')\n",
+    "else:\n",
+    "    print('Этот год невисокосный.')"
+   ]
   },
   {
    "cell_type": "markdown",
