--- a/SEM2.ipynb
+++ b/SEM2.ipynb
@@ -196,15 +196,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "id": "0wubl7wBfcI0"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ввели enter\n"
+     ]
+    }
+   ],
    "source": [
-    "s = input()  # ''\n",
-    "if ...:\n",
-    "  print('Ввели enter')\n"
+    "s = input()  \n",
+    "\n",
+    "if not s:\n",
+    "    print('Ввели enter')\n",
+    "else:\n",
+    "    print('Всё ок')"
    ]
   },
   {
