--- a/SEM2.ipynb
+++ b/SEM2.ipynb
@@ -232,17 +232,40 @@
    },
    "source": [
     "## Задача 6\n",
-    "Пользователь вводит строку. проверьте, является ли она числом, и увеличьте это число на единицу."
+    "Пользователь вводит строку. Проверьте, является ли она числом, и увеличьте это число на единицу."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "id": "oB7J0pn4fflM"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 5678\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Число, 5679\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = input()\n",
+    "\n",
+    "if a.isdigit():\n",
+    "    a = int(a)+1\n",
+    "    print('Число,', a)\n",
+    "else:\n",
+    "    print('Не число')"
+   ]
   },
   {
    "cell_type": "markdown",
