--- a/SEM2.ipynb
+++ b/SEM2.ipynb
@@ -279,12 +279,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "id": "rpqexBORfhyM"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " Мама Я Женюсь\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Похоже на название песни...\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = input()\n",
+    "\n",
+    "if a.istitle():\n",
+    "    print('Похоже на название песни...')\n",
+    "else:\n",
+    "    print('Просто строчка:(')"
+   ]
   },
   {
    "cell_type": "markdown",
