--- a/SEM2.ipynb
+++ b/SEM2.ipynb
@@ -281,7 +281,12 @@
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {
-    "id": "rpqexBORfhyM"
+    "editable": true,
+    "id": "rpqexBORfhyM",
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
    },
    "outputs": [
     {
@@ -320,12 +325,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "id": "VFyKWNrnfjsE"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " Vasya Pupkin\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vasya\n",
+      "Pupkin\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = input()\n",
+    "\n",
+    "print(a[0:a.find(' ')], a[a.find(' ')+1:], sep='\\n')"
+   ]
   },
   {
    "cell_type": "markdown",
