--- a/SEM2.ipynb
+++ b/SEM2.ipynb
@@ -364,12 +364,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "id": "FWcouu2RfnFL"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " fghjk/ghjkl.ghjk.pdf\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Расширение: pdf\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = input()\n",
+    "\n",
+    "print('Расширение:', a[a.rfind('.')+1:])"
+   ]
   },
   {
    "cell_type": "markdown",
