--- a/SEM2.ipynb
+++ b/SEM2.ipynb
@@ -402,12 +402,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
     "id": "1TaS2MpYfp4c"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 234\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Сумма цифр: 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = input()\n",
+    "\n",
+    "print('Сумма цифр:', int(a[0])+int(a[1])+int(a[2]))"
+   ]
   }
  ],
  "metadata": {
