--- a/HW2.ipynb
+++ b/HW2.ipynb
@@ -1,1 +1,204 @@
-{"nbformat":4,"nbformat_minor":0,"metadata":{"colab":{"provenance":[],"collapsed_sections":[],"authorship_tag":"ABX9TyMJ6kEjWswrOFh1/wUY5nk7"},"kernelspec":{"name":"python3","display_name":"Python 3"},"language_info":{"name":"python"}},"cells":[{"cell_type":"markdown","source":["#### Задача 1. \n","\n","Дана строка. Разрежьте ее на две равные части (если длина строки — четная, а если длина строки нечетная, то длина первой части должна быть на один символ больше). Переставьте эти две части местами, результат запишите в новую строку и выведите на экран."],"metadata":{"id":"0d9ON-OIqN_h"}},{"cell_type":"code","execution_count":null,"metadata":{"id":"ECeHHn5PqBg1"},"outputs":[],"source":[]},{"cell_type":"markdown","source":["#### Задача 2. \n","\n","Дана строка. Если в этой строке буква f встречается только один раз, выведите её индекс. Если она встречается два и более раз, выведите индекс её первого и последнего появления. Если буква f в данной строке не встречается, ничего не выводите."],"metadata":{"id":"Qg993zqUqQGh"}},{"cell_type":"code","source":[],"metadata":{"id":"61cnzTjVqTsN"},"execution_count":null,"outputs":[]},{"cell_type":"markdown","source":["#### Задача 3. \n","\n","Дана строка. Найдите в этой строке второе вхождение буквы f, и выведите индекс этого вхождения. Если буква f в данной строке встречается только один раз, выведите число -1, а если не встречается ни разу, выведите число -2."],"metadata":{"id":"Tg55pFl-qT94"}},{"cell_type":"code","source":[],"metadata":{"id":"z2ZHBlqfqXeQ"},"execution_count":null,"outputs":[]},{"cell_type":"markdown","source":["#### Задача 4. \n","\n","Пользователь вводит какие-то числа; программа должна выводить в ответ, четное число или нечетное, пока не будет введен 0."],"metadata":{"id":"_1tOdiaqqX04"}},{"cell_type":"code","source":[],"metadata":{"id":"Rvr_eEqjqrkx"},"execution_count":null,"outputs":[]},{"cell_type":"markdown","source":["#### Задача 5. \n","\n","Сперва пользователь вводит число n, а потом вводит n чисел. Нужно посчитать среднее арифметическое."],"metadata":{"id":"JwPe3Dmvqrth"}},{"cell_type":"code","source":[],"metadata":{"id":"tSB_rTPfq3Wp"},"execution_count":null,"outputs":[]},{"cell_type":"markdown","source":["#### Задача 6. \n","\n","Дано натуральное число n. Напечатайте все n-значные нечетные натуральные числа в порядке убывания. Условными конструкциями пользоваться запрещено.\n","\n","То есть, для введенного 2 должно начинаться как:\n","\n","    99\n","    97\n","    95\n","    93\n","    91\n","    ..."],"metadata":{"id":"8-VHAaezq3mg"}},{"cell_type":"code","source":[],"metadata":{"id":"FA2wf7xJq-GR"},"execution_count":null,"outputs":[]},{"cell_type":"markdown","source":["#### Задача 7. \n","\n","По данному натуральному n ≤ 9 выведите лесенку из n ступенек, i-я ступенька состоит из чисел от 1 до i без пробелов. То есть, должно быть что-то такое:\n","\n","    1\n","    12\n","    123\n","    1234"],"metadata":{"id":"J6mR5A8urRDQ"}},{"cell_type":"code","source":[],"metadata":{"id":"cDCzajvgrVBh"},"execution_count":null,"outputs":[]},{"cell_type":"markdown","source":["#### Задача 8. \n","\n","Пользователь вводит целые (не обязательно положительные) числа. Программа должна вывести самое большое введенное число. Списками пользоваться нельзя."],"metadata":{"id":"WRuR7thtrVVA"}},{"cell_type":"code","source":[],"metadata":{"id":"5PFWjAunrdw5"},"execution_count":null,"outputs":[]}]}
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "0d9ON-OIqN_h"
+   },
+   "source": [
+    "#### Задача 1. \n",
+    "\n",
+    "Дана строка. Разрежьте ее на две равные части (если длина строки — четная, а если длина строки нечетная, то длина первой части должна быть на один символ больше). Переставьте эти две части местами, результат запишите в новую строку и выведите на экран."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "ECeHHn5PqBg1"
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "Qg993zqUqQGh"
+   },
+   "source": [
+    "#### Задача 2. \n",
+    "\n",
+    "Дана строка. Если в этой строке буква f встречается только один раз, выведите её индекс. Если она встречается два и более раз, выведите индекс её первого и последнего появления. Если буква f в данной строке не встречается, ничего не выводите."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "61cnzTjVqTsN"
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "Tg55pFl-qT94"
+   },
+   "source": [
+    "#### Задача 3. \n",
+    "\n",
+    "Дана строка. Найдите в этой строке второе вхождение буквы f, и выведите индекс этого вхождения. Если буква f в данной строке встречается только один раз, выведите число -1, а если не встречается ни разу, выведите число -2."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "z2ZHBlqfqXeQ"
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "_1tOdiaqqX04"
+   },
+   "source": [
+    "#### Задача 4. \n",
+    "\n",
+    "Пользователь вводит какие-то числа; программа должна выводить в ответ, четное число или нечетное, пока не будет введен 0."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "Rvr_eEqjqrkx"
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "JwPe3Dmvqrth"
+   },
+   "source": [
+    "#### Задача 5. \n",
+    "\n",
+    "Сперва пользователь вводит число n, а потом вводит n чисел. Нужно посчитать среднее арифметическое."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "tSB_rTPfq3Wp"
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "8-VHAaezq3mg"
+   },
+   "source": [
+    "#### Задача 6. \n",
+    "\n",
+    "Дано натуральное число n. Напечатайте все n-значные нечетные натуральные числа в порядке убывания. Условными конструкциями пользоваться запрещено.\n",
+    "\n",
+    "То есть, для введенного 2 должно начинаться как:\n",
+    "\n",
+    "    99\n",
+    "    97\n",
+    "    95\n",
+    "    93\n",
+    "    91\n",
+    "    ..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "FA2wf7xJq-GR"
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "J6mR5A8urRDQ"
+   },
+   "source": [
+    "#### Задача 7. \n",
+    "\n",
+    "По данному натуральному n ≤ 9 выведите лесенку из n ступенек, i-я ступенька состоит из чисел от 1 до i без пробелов. То есть, должно быть что-то такое:\n",
+    "\n",
+    "    1\n",
+    "    12\n",
+    "    123\n",
+    "    1234"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "cDCzajvgrVBh"
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "WRuR7thtrVVA"
+   },
+   "source": [
+    "#### Задача 8. \n",
+    "\n",
+    "Пользователь вводит целые (не обязательно положительные) числа. Программа должна вывести самое большое введенное число. Списками пользоваться нельзя."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "5PFWjAunrdw5"
+   },
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "colab": {
+   "authorship_tag": "ABX9TyMJ6kEjWswrOFh1/wUY5nk7",
+   "collapsed_sections": [],
+   "provenance": []
+  },
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.4"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
+}
