--- a/HW2.ipynb
+++ b/HW2.ipynb
@@ -13,12 +13,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "id": "ECeHHn5PqBg1"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " ssff\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ffss\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = input()\n",
+    "\n",
+    "if len(a)%2==0:\n",
+    "    s = a[len(a)//2:] + a[0:len(a)//2]\n",
+    "else:\n",
+    "    s = a[len(a)//2+1:] + a[0:len(a)//2+1]\n",
+    "print(s)"
+   ]
   },
   {
    "cell_type": "markdown",
