--- a/HW2.ipynb
+++ b/HW2.ipynb
@@ -56,12 +56,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "id": "61cnzTjVqTsN"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " father\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = input()\n",
+    "\n",
+    "if a.count('f')==1:\n",
+    "    print(a.find('f'))\n",
+    "elif a.count('f')>1:\n",
+    "    print(a.find('f'), a.rfind('f'))"
+   ]
   },
   {
    "cell_type": "markdown",
