--- a/HW2.ipynb
+++ b/HW2.ipynb
@@ -98,12 +98,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "id": "z2ZHBlqfqXeQ"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " fuck\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = input()\n",
+    "\n",
+    "if a.count('f')==0:\n",
+    "    print(-2)\n",
+    "else:\n",
+    "    print(a.find('f', a.find('f')+1))"
+   ]
   },
   {
    "cell_type": "markdown",
