--- a/HW2.ipynb
+++ b/HW2.ipynb
@@ -140,12 +140,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "id": "Rvr_eEqjqrkx"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 4\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Четное\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 6\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Четное\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Нечетное\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(input())\n",
+    "\n",
+    "while a != 0:\n",
+    "    if a%2==0:\n",
+    "        print('Четное')\n",
+    "    else:\n",
+    "        print('Нечетное')\n",
+    "    a = int(input())"
+   ]
   },
   {
    "cell_type": "markdown",
