--- a/HW2.ipynb
+++ b/HW2.ipynb
@@ -219,12 +219,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "id": "tSB_rTPfq3Wp"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 3\n",
+      " 1\n",
+      " 2\n",
+      " 3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input())\n",
+    "sum = 0\n",
+    "\n",
+    "for i in range(n):\n",
+    "    m = int(input())\n",
+    "    sum = m+sum\n",
+    "\n",
+    "print(sum/n)"
+   ]
   },
   {
    "cell_type": "markdown",
