--- a/HW2.ipynb
+++ b/HW2.ipynb
@@ -275,12 +275,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "id": "FA2wf7xJq-GR"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n",
+      "7\n",
+      "5\n",
+      "3\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input())\n",
+    "\n",
+    "for i in range(10**n-1, 10**(n-1)-1, -2):\n",
+    "    print(i)"
+   ]
   },
   {
    "cell_type": "markdown",
