--- a/HW2.ipynb
+++ b/HW2.ipynb
@@ -324,12 +324,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "id": "cDCzajvgrVBh"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "1\n",
+      "12\n",
+      "123\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input())\n",
+    "\n",
+    "for i in range(n+1):\n",
+    "    for m in range (1, i+1):\n",
+    "        print(m, end='')\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
