--- a/HW2.ipynb
+++ b/HW2.ipynb
@@ -369,12 +369,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {
     "id": "5PFWjAunrdw5"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Сколько чисел вы будете вводить? 3\n",
+      " -4567\n",
+      " 3\n",
+      " 4\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "N = int(input('Сколько чисел вы будете вводить?'))\n",
+    "max = int(input())\n",
+    " \n",
+    "for i in range(N-1):\n",
+    "    p = int(input())\n",
+    "    if p>max:\n",
+    "        max = p\n",
+    "print(max)"
+   ]
   }
  ],
  "metadata": {
