Add second solution to task 8

--- a/HW1.ipynb
+++ b/HW1.ipynb
@@ -361,6 +361,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {
+    "id": "U8ljbLqohS8M"
+   },
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 123.4\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = float(input())\n",
+    "\n",
+    "print(int(x * 10 % 10))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "FNv05ieohUC7"
