--- a/HW1.ipynb
+++ b/HW1.ipynb
@@ -448,32 +448,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 115,
    "metadata": {
     "id": "-_9mCMVHho-8"
    },
    "outputs": [
     {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      " 33\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "33 коровы\n"
+      "90 коров\n",
+      "91 корова\n",
+      "92 коровы\n",
+      "93 коровы\n",
+      "94 коровы\n",
+      "95 коров\n",
+      "96 коров\n",
+      "97 коров\n",
+      "98 коров\n",
+      "99 коров\n",
+      "100 коров\n",
+      "101 корова\n",
+      "102 коровы\n",
+      "103 коровы\n",
+      "104 коровы\n",
+      "105 коров\n",
+      "106 коров\n",
+      "107 коров\n",
+      "108 коров\n",
+      "109 коров\n",
+      "110 коров\n",
+      "111 коров\n",
+      "112 коров\n",
+      "113 коров\n",
+      "114 коров\n",
+      "115 коров\n",
+      "116 коров\n",
+      "117 коров\n",
+      "118 коров\n",
+      "119 коров\n",
+      "120 коров\n",
+      "121 корова\n",
+      "122 коровы\n",
+      "123 коровы\n",
+      "124 коровы\n",
+      "125 коров\n",
+      "126 коров\n",
+      "127 коров\n",
+      "128 коров\n",
+      "129 коров\n"
      ]
     }
    ],
    "source": [
     "n = int(input())\n",
     "\n",
-    "if n%10 == 1:\n",
+    "if n // 10 % 10 == 1:\n",
+    "    print(n, 'коров')\n",
+    "elif n % 10 == 1:\n",
     "    print(n, 'корова')\n",
-    "elif n%10>1 and n%10<5:\n",
+    "elif n % 10 > 1 and n % 10 < 5:\n",
     "    print(n, 'коровы')\n",
     "else:\n",
     "    print(n, 'коров')"
