Fix codestyle, add "if not"

--- a/SEM2.ipynb
+++ b/SEM2.ipynb
@@ -44,7 +44,7 @@
    "source": [
     "a = int(input())\n",
     "\n",
-    "if a%2==0:\n",
+    "if not a % 2:\n",
     "    print('Четное')\n",
     "else:\n",
     "    print('Нечетное')"
@@ -85,7 +85,7 @@
    "source": [
     "a = int(input())\n",
     "\n",
-    "print(a%10)"
+    "print(a % 10)"
    ]
   },
   {
@@ -123,11 +123,11 @@
    "source": [
     "a = int(input())\n",
     "\n",
-    "z = a%10\n",
-    "y = a//10%10\n",
-    "x = a//10//10\n",
+    "z = a % 10\n",
+    "y = a // 10 % 10\n",
+    "x = a // 10 // 10\n",
     "\n",
-    "print(x+y+z)"
+    "print(x + y + z)"
    ]
   },
   {
@@ -165,11 +165,11 @@
    "source": [
     "a = int(input())\n",
     "\n",
-    "if a%400==0:\n",
+    "if not a % 400:\n",
     "    print('Этот год високосный.')\n",
-    "elif a%100==0:\n",
+    "elif not a % 100:\n",
     "    print('Этот год невисокосный.')\n",
-    "elif a%4==0:\n",
+    "elif not a % 4:\n",
     "    print('Этот год високосный.')\n",
     "else:\n",
     "    print('Этот год невисокосный.')"
@@ -261,7 +261,7 @@
     "a = input()\n",
     "\n",
     "if a.isdigit():\n",
-    "    a = int(a)+1\n",
+    "    a = int(a) + 1\n",
     "    print('Число,', a)\n",
     "else:\n",
     "    print('Не число')"
@@ -349,7 +349,7 @@
    "source": [
     "a = input()\n",
     "\n",
-    "print(a[0:a.find(' ')], a[a.find(' ')+1:], sep='\\n')"
+    "print(a[0:a.find(' ')], a[a.find(' ') + 1:], sep = '\\n')"
    ]
   },
   {
@@ -387,7 +387,7 @@
    "source": [
     "a = input()\n",
     "\n",
-    "print('Расширение:', a[a.rfind('.')+1:])"
+    "print('Расширение:', a[a.rfind('.') + 1:])"
    ]
   },
   {
@@ -425,7 +425,7 @@
    "source": [
     "a = input()\n",
     "\n",
-    "print('Сумма цифр:', int(a[0])+int(a[1])+int(a[2]))"
+    "print('Сумма цифр:', int(a[0]) + int(a[1]) + int(a[2]))"
    ]
   }
  ],
