--- a/HW2.ipynb
+++ b/HW2.ipynb
@@ -36,10 +36,10 @@
    "source": [
     "a = input()\n",
     "\n",
-    "if len(a)%2==0:\n",
-    "    s = a[len(a)//2:] + a[0:len(a)//2]\n",
+    "if not len(a) % 2:\n",
+    "    s = a[len(a) // 2:] + a[:len(a) // 2]\n",
     "else:\n",
-    "    s = a[len(a)//2+1:] + a[0:len(a)//2+1]\n",
+    "    s = a[len(a) // 2 + 1:] + a[:len(a) // 2 + 1]\n",
     "print(s)"
    ]
   },
@@ -79,9 +79,9 @@
    "source": [
     "a = input()\n",
     "\n",
-    "if a.count('f')==1:\n",
+    "if a.count('f') == 1:\n",
     "    print(a.find('f'))\n",
-    "elif a.count('f')>1:\n",
+    "elif a.count('f') > 1:\n",
     "    print(a.find('f'), a.rfind('f'))"
    ]
   },
@@ -121,10 +121,10 @@
    "source": [
     "a = input()\n",
     "\n",
-    "if a.count('f')==0:\n",
+    "if a.count('f') == 0:\n",
     "    print(-2)\n",
     "else:\n",
-    "    print(a.find('f', a.find('f')+1))"
+    "    print(a.find('f', a.find('f') + 1))"
    ]
   },
   {
@@ -199,7 +199,7 @@
     "a = int(input())\n",
     "\n",
     "while a != 0:\n",
-    "    if a%2==0:\n",
+    "    if not a % 2:\n",
     "        print('Четное')\n",
     "    else:\n",
     "        print('Нечетное')\n",
@@ -248,9 +248,9 @@
     "\n",
     "for i in range(n):\n",
     "    m = int(input())\n",
-    "    sum = m+sum\n",
+    "    sum = m + sum\n",
     "\n",
-    "print(sum/n)"
+    "print(sum / n)"
    ]
   },
   {
@@ -302,7 +302,7 @@
    "source": [
     "n = int(input())\n",
     "\n",
-    "for i in range(10**n-1, 10**(n-1)-1, -2):\n",
+    "for i in range(10 ** n - 1, 10 ** (n - 1) - 1, -2):\n",
     "    print(i)"
    ]
   },
@@ -350,9 +350,9 @@
    "source": [
     "n = int(input())\n",
     "\n",
-    "for i in range(n+1):\n",
-    "    for m in range (1, i+1):\n",
-    "        print(m, end='')\n",
+    "for i in range(n + 1):\n",
+    "    for m in range (1, i + 1):\n",
+    "        print(m, end = '')\n",
     "    print()"
    ]
   },
@@ -396,9 +396,9 @@
     "N = int(input('Сколько чисел вы будете вводить?'))\n",
     "max = int(input())\n",
     " \n",
-    "for i in range(N-1):\n",
+    "for i in range(N - 1):\n",
     "    p = int(input())\n",
-    "    if p>max:\n",
+    "    if p > max:\n",
     "        max = p\n",
     "print(max)"
    ]
