--- a/HW3.ipynb
+++ b/HW3.ipynb
@@ -20,7 +20,7 @@
    "outputs": [],
    "source": [
     "def triangle_area(a, h):\n",
-    "  # your code here"
+    "  return 1/2 * a * h"
    ]
   },
   {
