--- a/HW3.ipynb
+++ b/HW3.ipynb
@@ -36,14 +36,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "id": "qcla3UeZdCzs"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 3\n",
+      " 4\n",
+      " 5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "((-4+1.1055415967851332j), (-4-1.1055415967851332j))\n"
+     ]
+    }
+   ],
    "source": [
+    "from cmath import sqrt\n",
     "def roots(a, b, c):\n",
-    "  # your code here"
+    "    D = b ** 2 - 4 * a * c\n",
+    "    x1 = -b + sqrt(D) / (2 * a)\n",
+    "    x2 = -b - sqrt(D) / (2 * a)\n",
+    "    return x1, x2 \n",
+    "\n",
+    "#a = int(input())\n",
+    "#b = int(input())\n",
+    "#c = int(input())\n",
+    "#ans = roots(a, b, c)\n",
+    "#print(ans)"
    ]
   },
   {
