--- a/HW3.ipynb
+++ b/HW3.ipynb
@@ -86,14 +86,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {
     "id": "n7q7bCTedSTk"
    },
    "outputs": [],
    "source": [
     "def cyrillic(string):\n",
-    "  # your code here"
+    "    end = len(string)\n",
+    "    for i in range(0, end):\n",
+    "        if string[i] < 'а' or string[i] > 'я':\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
+    "#string = input()\n",
+    "#cyrillic(string)"
    ]
   },
   {
