--- a/HW3.ipynb
+++ b/HW3.ipynb
@@ -116,14 +116,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {
     "id": "48LRGSbOdcO0"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " asdsa\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "def palindrome(string):\n",
-    "  # your code here"
+    "    end = len(string)\n",
+    "    if end == 0 or end == 1:\n",
+    "        return True\n",
+    "    if string[0] == string[-1]:\n",
+    "        return palindrome(string[1:-1])\n",
+    "    else:\n",
+    "        return False\n",
+    "        \n",
+    "string = input()\n",
+    "print(palindrome(string))"
    ]
   },
   {
