--- a/HW3.ipynb
+++ b/HW3.ipynb
@@ -167,14 +167,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "id": "rRdfZ8EzeyJO"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " abcde\n",
+      " 5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fghij"
+     ]
+    }
+   ],
    "source": [
     "def caesar(text, shift):\n",
-    "  # your code here"
+    "    end = len(text)\n",
+    "    for i in text:\n",
+    "        i = ord(i) + shift\n",
+    "        print(chr(i), end = \"\")\n",
+    "\n",
+    "# text = input()\n",
+    "# shift = int(input())\n",
+    "# caesar(text, shift)"
    ]
   },
   {
