--- a/HW3.ipynb
+++ b/HW3.ipynb
@@ -217,15 +217,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "id": "Ix-JqYuPfc_f"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " Дом, который построил Джек!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Дом который построил Джек'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def nopunct(text):\n",
-    "  # your code here\n",
-    "  return text"
+    "    text = text.replace('.', '')\n",
+    "    text = text.replace(',', '')\n",
+    "    text = text.replace(':', '')\n",
+    "    text = text.replace(';', '')\n",
+    "    text = text.replace('!', '')\n",
+    "    text = text.replace('?', '')\n",
+    "    text = text.replace('-', '')\n",
+    "    return text\n",
+    "\n",
+    "# text = input()\n",
+    "# nopunct(text)"
    ]
   }
  ],
