--- a/SEM3.ipynb
+++ b/SEM3.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "c_NfnVDRo1Eh"
@@ -13,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "executionInfo": {
      "elapsed": 5,
@@ -27,10 +28,28 @@
     },
     "id": "Epk1LkDZoqo1"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25\n",
+      "49\n",
+      "Это не число. Пока.\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = input()\n",
+    "while numbers.isdigit():\n",
+    "    print(int(numbers) ** 2)\n",
+    "    numbers = input()\n",
+    "else:\n",
+    "    print(\"Это не число. Пока.\")"
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "8YEJc-Zlo5AA"
@@ -61,6 +80,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "RMS_LRTfo-Cp"
@@ -91,6 +111,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "m1CsBiJJpCZA"
@@ -111,6 +132,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "jfTCHSQdpHhQ"
@@ -131,6 +153,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "0J7bTu8wpL4x"
@@ -151,6 +174,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "SsJVPHkwpgHg"
@@ -171,6 +195,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "PU7qCyOoptpQ"
