--- a/SEM3.ipynb
+++ b/SEM3.ipynb
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 34,
    "metadata": {
     "executionInfo": {
      "elapsed": 5,
@@ -156,8 +156,22 @@
     },
     "id": "-2SsbQLHpB5R"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Мама\n",
+      "Родитель Номер Один\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = input()\n",
+    "while text.lower() != 'стоп':\n",
+    "    print(text.title())\n",
+    "    text = input()"
+   ]
   },
   {
    "attachments": {},
