--- a/SEM3.ipynb
+++ b/SEM3.ipynb
@@ -187,12 +187,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "id": "mRRJ0emqpHZo"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "aSdFgH\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = input()\n",
+    "text1 = ''\n",
+    "end = len(text)\n",
+    "for i in range(end):\n",
+    "    if i % 2 == 1:\n",
+    "        text1 = text1 + text[i].upper()\n",
+    "    else:\n",
+    "        text1 = text1 + text[i] \n",
+    "print(text1)\n",
+    "    "
+   ]
   },
   {
    "attachments": {},
