--- a/HW3.ipynb
+++ b/HW3.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "OIPMYYRPcL7N"
@@ -24,6 +25,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "A04KTs-9csYE"
@@ -42,7 +44,7 @@
    },
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       " 3\n",
@@ -59,11 +61,10 @@
     }
    ],
    "source": [
-    "from cmath import sqrt\n",
     "def roots(a, b, c):\n",
     "    D = b ** 2 - 4 * a * c\n",
-    "    x1 = -b + sqrt(D) / (2 * a)\n",
-    "    x2 = -b - sqrt(D) / (2 * a)\n",
+    "    x1 = -b + D ** 0.5 / (2 * a)\n",
+    "    x2 = -b - D ** 0.5 / (2 * a)\n",
     "    return x1, x2 \n",
     "\n",
     "#a = int(input())\n",
@@ -74,6 +75,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "Q5yXY75BdEAs"
@@ -104,6 +106,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "YEswvwmsdTJc"
@@ -122,7 +125,7 @@
    },
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       " asdsa\n"
@@ -151,6 +154,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "ugibvqb0dch8"
@@ -173,7 +177,7 @@
    },
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       " abcde\n",
@@ -201,6 +205,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "fc58Z5KkfD7H"
@@ -223,7 +228,7 @@
    },
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       " Дом, который построил Джек!\n"
