--- a/HW3.ipynb
+++ b/HW3.ipynb
@@ -96,8 +96,8 @@
    "source": [
     "def cyrillic(string):\n",
     "    end = len(string)\n",
-    "    for i in range(0, end):\n",
-    "        if string[i] < 'а' or string[i] > 'я':\n",
+    "    for i in range(end):\n",
+    "        if string[i] < 'а' or string[i] > 'я' or string[i] < 'А' or string[i] > 'Я':\n",
     "            return False\n",
     "    return True\n",
     "\n",
