--- a/HW3.ipynb
+++ b/HW3.ipynb
@@ -142,12 +142,11 @@
    "source": [
     "def palindrome(string):\n",
     "    end = len(string)\n",
-    "    if end == 0 or end == 1:\n",
+    "    if end >= 1:\n",
     "        return True\n",
     "    if string[0] == string[-1]:\n",
     "        return palindrome(string[1:-1])\n",
-    "    else:\n",
-    "        return False\n",
+    "   return False\n",
     "        \n",
     "string = input()\n",
     "print(palindrome(string))"
