--- a/HW3.ipynb
+++ b/HW3.ipynb
@@ -146,7 +146,7 @@
     "        return True\n",
     "    if string[0] == string[-1]:\n",
     "        return palindrome(string[1:-1])\n",
-    "   return False\n",
+    "    return False\n",
     "        \n",
     "string = input()\n",
     "print(palindrome(string))"
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {
     "id": "rRdfZ8EzeyJO"
    },
@@ -179,28 +179,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " abcde\n",
-      " 5\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "fghij"
+      "ПгпГ фЭиоГ уЮдЦ!123"
      ]
     }
    ],
    "source": [
     "def caesar(text, shift):\n",
-    "    end = len(text)\n",
-    "    for i in text:\n",
-    "        i = ord(i) + shift\n",
-    "        print(chr(i), end = \"\")\n",
+    "    for c in text:\n",
+    "        if c.isupper():\n",
+    "            old_index = ord(c) - ord(\"А\")\n",
+    "            new_index = (old_index + shift) % 33\n",
+    "            new_c = chr(new_index + ord(\"А\"))\n",
+    "        elif c.islower():\n",
+    "            old_index = ord(c) - ord(\"а\")\n",
+    "            new_index = (old_index + shift) % 33\n",
+    "            new_c = chr(new_index + ord(\"а\"))\n",
+    "        else:\n",
+    "            new_c = c\n",
+    "        print(new_c, end = \"\")\n",
     "\n",
-    "# text = input()\n",
-    "# shift = int(input())\n",
-    "# caesar(text, shift)"
+    "text = input()\n",
+    "shift = int(input())\n",
+    "caesar(text, shift)"
    ]
   },
   {
