--- a/HW3.ipynb
+++ b/HW3.ipynb
@@ -258,6 +258,36 @@
     "# text = input()\n",
     "# nopunct(text)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Дом который построил Джек"
+     ]
+    }
+   ],
+   "source": [
+    "def nopunct(text):\n",
+    "    for c in text:\n",
+    "        if c.isalpha():\n",
+    "            new_c = c\n",
+    "        elif c.isdigit():\n",
+    "            new_c = c\n",
+    "        elif c == \" \":\n",
+    "            new_c = c\n",
+    "        else:\n",
+    "            new_c = \"\"\n",
+    "        print(new_c, end=\"\")\n",
+    "\n",
+    "text = input()\n",
+    "nopunct(text)"
+   ]
   }
  ],
  "metadata": {
