--- a/SEM3.ipynb
+++ b/SEM3.ipynb
@@ -227,12 +227,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {
     "id": "HlXb_aFApLkh"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "н\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def palindrome(string):\n",
+    "    string = string.replace(\" \", \"\")\n",
+    "    if len(string) <= 1:\n",
+    "        # print(string)\n",
+    "        return True\n",
+    "    if string[0] == string[-1]:\n",
+    "        # print(string)\n",
+    "        return palindrome(string[1:-1])\n",
+    "    # print(string)\n",
+    "    return False\n",
+    "        \n",
+    "string = input()\n",
+    "print(palindrome(string))"
+   ]
   },
   {
    "attachments": {},
