--- a/SEM3.ipynb
+++ b/SEM3.ipynb
@@ -271,12 +271,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {
     "id": "8ecnu-k8pf__"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ghjk ghjk ghjk ghjk"
+     ]
+    }
+   ],
+   "source": [
+    "def spaces(text):\n",
+    "    flag = 0\n",
+    "    for c in text:\n",
+    "        new_c = \"\"\n",
+    "        if c == \" \" and flag == 0:\n",
+    "            new_c = c\n",
+    "            flag = 1\n",
+    "        if c.isalpha():\n",
+    "            new_c = c\n",
+    "            flag = 0\n",
+    "        print(new_c, end=\"\")\n",
+    "\n",
+    "text = input()\n",
+    "spaces(text)"
+   ]
   },
   {
    "attachments": {},
