--- a/SEM3.ipynb
+++ b/SEM3.ipynb
@@ -315,12 +315,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {
     "id": "2-_tXhB8pjZf"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "r1 = input()\n",
+    "r2 = input()\n",
+    "while not r1.isalpha():\n",
+    "    break\n",
+    "else:\n",
+    "    if r1[-4:] == r2[-4:]:\n",
+    "        print(\"рифма есть\")\n",
+    "    else:\n",
+    "        print(\"увы, рифмы нет\")"
+   ]
   },
   {
    "attachments": {},
