--- a/SEM3.ipynb
+++ b/SEM3.ipynb
@@ -346,12 +346,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {
     "id": "krHyLHZnpvfw"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123\n",
+      "12\n",
+      "1\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = int(input())\n",
+    "def sum(num):\n",
+    "    # print(num)\n",
+    "    if num > -10 and num < 10:\n",
+    "        return num\n",
+    "    else:\n",
+    "        x = num % 10 \n",
+    "        return sum(num // 10) + x\n",
+    "    \n",
+    "print(sum(num))"
+   ]
   }
  ],
  "metadata": {
